Change selectec row in the grid

--- a/src/DashboardBundle/Resources/views/Common/Partials/_backend-footer.html.twig
+++ b/src/DashboardBundle/Resources/views/Common/Partials/_backend-footer.html.twig
@@ -1,5 +1,5 @@
 
-<footer>© 2015
-  <strong>nK</strong>. All rights reserved.
-  <a href="http://themeforest.net/item/con-material-admin-dashboard-template/10621512?ref=_nK">Purchase</a>
+<footer>
+  <strong>COPYRIGHT</strong> © 2015 - 2016. All rights reserved. | <a target="_blank" href="http://agentsbud.com">AgentsBud</a>
+  <div class="right"><b>  Create by </b> <img height="20" src="{{ asset('bundles/common/images/logo-left.png') }}" alt="LOGO" style="position: relative;top: 7px;margin-left: 5px;"></div>
 </footer>
