--- a/src/DashboardBundle/Resources/views/Grid/gridTemplateProperties.html.twig
+++ b/src/DashboardBundle/Resources/views/Grid/gridTemplateProperties.html.twig
@@ -199,9 +199,9 @@
 
           <script>
             $(document).ready(function () {
-              $('.slider').slider({
-                autoplay:false
-              });
+//              $('.slider').slider({
+//                autoplay:false
+//              });
             });
           </script>
 
