--- a/src/DashboardBundle/Resources/views/Properties/mls.html.twig
+++ b/src/DashboardBundle/Resources/views/Properties/mls.html.twig
@@ -5,47 +5,142 @@
 {% endblock breadcrumb%}
 
 {% block content %}
-
+    <style>
+    .item-icon-footer {
+        padding-left: 5px !important;
+        padding-right: 2px !important;
+        padding-bottom: 10px !important;
+        padding-top: 10px !important;
+        max-height: 40px;
+        min-height: 40px;
+        height: 40px;
+    }
+    </style>
     <div class="card">
+        <div class="title"> <h5> MLS Properties </h5> </div>
+        <div class="content" style="padding: 15px;">
 
-        <div class="title">
-            <h5> MLS Properties </h5>
-        </div>
+            {% for key,data in properties %}
+            <div class="row" style="margin-bottom: 0px;margin-top: 0px;cursor: pointer;">
+                {% if key%2 == 0 %}
+                <div class="col m6">
+                    <a href="{{path('properties_design', {'mls_id':data.mlsId})}}">
+                        <div class="hoverable">
+                            <div class="row" style="box-shadow: 0 1px 2px rgba(0,0,0,.26)!important;max-height: 192px;margin-top: 15px;margin-right: 0px;">
+                                <div class="col m5" style="padding-right: 0px;padding-bottom: 0px;">
+                                    <div class="card-image image-properties">
+                                        <img src="{{properties[key].photos.0}}" alt="LOGO">
+                                    </div>
+                                </div>
+                                <div class="col m7">
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 15px;padding-bottom: 5px;padding-top: 10px;max-height: 40px;min-height: 40px;height: 40px;">
+                                            <span class="card-title dark-text" style="font-size: 17px;">{{properties[key].property.subdivision}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 15px;padding-bottom: 5px;padding-top: 5px;max-height: 40px;min-height: 40px;height: 40px;">
+                                            <ul style="margin: 0px">
+                                                <li style="color: #616161!important;font-size: 10px;">{{properties[key].address.full}}, {{properties[key].address.city}}, {{properties[key].address.state}}</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 0px;">
+                                            <hr style="margin: 0px;">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 5px 5px 5px 15px;color: #616161!important;max-height: 67px;min-height: 67px;height: 67px;">
+                                            I am a very simple card. I am good at conta ining small bits of information. I am a very simple card
+                                        </div>
+                                    </div>
 
-        <div class="content">
-            {% for data in properties %}
-                <div class="row">
-                    <div class="col m3" style="padding-right: 0px">
-                        <div class="card-image image-properties">
-                            <img src="{{data.photos.0}}">
-                        </div>
-                    </div>
-                    <div class="col m9">
-                        <div class="card body-properties">
-                            <div class="card-content dark-clare-text">
-                                <a href="{{path('properties_design', {'mls_id':data.mlsId})}}" class="property-row-image">
-                                    <span class="card-title dark-text">{{data.property.subdivision}}</span>
-                                </a>
-                                <ul class="property-row-location">
-                                    <li>{{data.address.full}}, {{data.address.city}}, {{data.address.state}}</li>
-                                </ul>
-                                <p>
-                                    I am a very simple card. I am good at containing small bits of information.
-                                    I am convenient because I require little markup to use effectively.
-                                </p>
-                            </div>
-                            <div class="card-action card-action-properties" style="padding: 13px;">
-                                <a href="#" class="azure-text">Price: {{data.listPrice|number_format(2, '.', ',')}}</a>
-                                <a href="#" class="azure-text">Bed: {{data.property.bedrooms}}</a>
-                                <a href="#" class="azure-text">Bath: {{data.property.bathsFull + data.property.bathsHalf}}</a>
-                                <a href="#" class="azure-text">Size: {{data.property.lotSize}}</a>
-                                <a href="#" class="azure-text">FOR RENT</a>
-                                <a href="#" class="azure-text right"><i class="fa fa-share-alt"></i></a>
-                                <a href="#" class="azure-text right"><i class="fa fa-heart"></i></a>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 0px;">
+                                            <hr style="margin: 0px;">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m4 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Price" class="card-title blue-text tooltipped" style="font-size: 10px;"> <i style="font-size: 18px;" class="mdi mdi-editor-attach-money blue-text"></i> {{properties[key].listPrice|number_format(2, '.', ',')}}</span>
+                                        </div>
+                                        <div class="col m2 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Bed" class="card-title blue-text tooltipped" style="font-size: 12px;"> <i style="font-size: 18px;" class="mdi mdi-maps-local-hotel blue-text"></i> {{properties[key].property.bedrooms}}</span>
+                                        </div>
+                                        <div class="col m2 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Bath" class="card-title blue-text tooltipped" style="font-size: 12px;"> <i style="font-size: 18px;" class="mdi mdi-maps-local-library blue-text"></i> {{properties[key].property.bathsFull + properties[key].property.bathsHalf}}</span>
+                                        </div>
+                                        <div class="col m4 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Size" class="card-title blue-text tooltipped" style="font-size: 11px;"> <i style="font-size: 18px;" class="mdi mdi-action-open-with blue-text"></i> {{properties[key].property.lotSize| slice(0, 9)}}</span>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
+                {% endif %}
+                {% if (key+1)%2 != 0 %}
+                <div class="col m6">
+                    <a href="">
+                        <div class="hoverable">
+                            <div class="row" style="box-shadow: 0 1px 2px rgba(0,0,0,.26)!important;max-height: 192px;margin-top: 15px;margin-right: 0px;">
+                                <div class="col m5" style="padding-right: 0px;padding-bottom: 0px;">
+                                    <div class="card-image image-properties">
+                                        <img src="{{properties[key+1].photos.0}}" alt="LOGO">
+                                    </div>
+                                </div>
+                                <div class="col m7">
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 15px;padding-bottom: 5px;padding-top: 10px;max-height: 40px;min-height: 40px;height: 40px;">
+                                            <span class="card-title dark-text" style="font-size: 17px;">{{properties[key+1].property.subdivision}}</span>
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 15px;padding-bottom: 5px;padding-top: 5px;max-height: 40px;min-height: 40px;height: 40px;">
+                                            <ul style="margin: 0px">
+                                                <li style="color: #616161!important;font-size: 10px;">{{properties[key+1].address.full}}, {{properties[key+1].address.city}}, {{properties[key+1].address.state}}</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 0px;">
+                                            <hr style="margin: 0px;">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 5px 5px 5px 15px;color: #616161!important;max-height: 67px;min-height: 67px;height: 67px;">
+                                            I am a very simple card. I am good at conta ining small bits of information. I am a very simple card
+                                        </div>
+                                    </div>
+
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m12" style="padding: 0px;">
+                                            <hr style="margin: 0px;">
+                                        </div>
+                                    </div>
+                                    <div class="row" style="margin-top:0px;">
+                                        <div class="col m4 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Price" class="card-title blue-text tooltipped" style="font-size: 10px;"> <i style="font-size: 18px;" class="mdi mdi-editor-attach-money blue-text"></i> {{properties[key].listPrice|number_format(2, '.', ',')}}</span>
+                                        </div>
+                                        <div class="col m2 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Bed" class="card-title blue-text tooltipped" style="font-size: 12px;"> <i style="font-size: 18px;" class="mdi mdi-maps-local-hotel blue-text"></i> {{properties[key].property.bedrooms}}</span>
+                                        </div>
+                                        <div class="col m2 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Bath" class="card-title blue-text tooltipped" style="font-size: 12px;"> <i style="font-size: 18px;" class="mdi mdi-maps-local-library blue-text"></i> {{properties[key].property.bathsFull + properties[key].property.bathsHalf}}</span>
+                                        </div>
+                                        <div class="col m4 item-icon-footer">
+                                            <span data-position="top" data-delay="50" data-tooltip="Size" class="card-title blue-text tooltipped" style="font-size: 11px;"> <i style="font-size: 18px;" class="mdi mdi-action-open-with blue-text"></i> {{properties[key].property.lotSize| slice(0, 9)}}</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                {% endif %}
+            </div>
             {% endfor %}
         </div>
     </div>
