Last changes in activities and profile

--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-account-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-account-info.html.twig
@@ -1,5 +1,5 @@
-<div id="test2" class="col s12">
-  <div id="edit-profile-container" style="display:block">
+<div id="tab-account-info" class="col s12">
+  <div style="display:block">
     <div class="row" style="padding-left: 20px;padding-right: 40%">
       {{ form_start(account_form, {'action': path('profile_save_account'), 'method': 'POST', 'id':'profile_account_form'}) }}
       <div class="row" style="margin-top: 0rem;">
@@ -45,11 +45,9 @@
       <div class="row" style="padding-right: 25px;padding-top: 20px">
         <div class="col s12">
           <button id="btn-account-save" type="submit" class="waves-effect waves-light btn btn-small">SAVE</button>
-          <a id="btn-account-cancel" class="waves-effect waves-light btn btn-small red">CANCEL</a>
         </div>
       </div>
       {{ form_end(account_form) }}
     </div>
   </div>
-
 </div>
