--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-payment-option.html.twig
@@ -1,4 +1,4 @@
-<div id="test3" class="col s12" style="color: #5e5e5e;">
+<div id="tab-billing-info" class="col s12" style="color: #5e5e5e;">
   <div class="row">
     <div class="col md6 s6">
       <div class="row" style="margin-top: 0px;">
