--- a/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
+++ b/src/UserBundle/Resources/views/Profile/Partials/_index-tab-profile-info.html.twig
@@ -1,5 +1,4 @@
-<div id="test1" class="col s12" style="color: #5e5e5e;">
-
+<div id="tab-profile-info" class="col s12" style="color: #5e5e5e;">
   <div class="row" style="margin-top: 0px;">
     <nav style="padding-right: 25px;color: #424242;background-color: #fff;box-shadow: 0 0px 0px rgba(0,0,0,.26)!important;padding-left: 30px;">
       <div class="nav-wrapper">
@@ -13,7 +12,6 @@
         </ul>
       </div>
     </nav>
-
   </div>
 
   <div class="row" id="edit-profile-information">
