Paginado and search in Templeate page

--- a/src/DashboardBundle/Resources/views/ContactList/new.html.twig
+++ b/src/DashboardBundle/Resources/views/ContactList/new.html.twig
@@ -12,7 +12,7 @@
 			<div class="btn-group right">
 				<a href="{{ path('contactlist_index') }}" class="btn btn-small waves-dark waves-effect"><i class="mdi mdi-hardware-keyboard-arrow-left left"></i>Back</a>
 				<a id="save_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-content-save left"></i> Save</a>
-				<a id="save_and_close_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-action-done left"></i> Save and Close</a>
+				{#<a id="save_and_close_action" class="btn btn-small waves-dark waves-effect"> <i class="mdi mdi-action-done left"></i> Save and Close</a>#}
 			</div>
 		</div>
 		<div class="content">
